feat(pedm): regenerate the OpenAPI clients
