# crates/devolutions-pedm-shared/devolutions-pedm-client-http/src/models/elevation_request.rs
@@ -3,8 +3,8 @@
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * The version of the OpenAPI document:
- *
+ * The version of the OpenAPI document: 
+ * 
  * Generated by: https://openapi-generator.tech
  */
 
@@ -22,11 +22,7 @@ pub struct ElevationRequest {
 }
 
 impl ElevationRequest {
-    pub fn new(
-        asker: models::Application,
-        target: models::Application,
-        unix_timestamp_seconds: u64,
-    ) -> ElevationRequest {
+    pub fn new(asker: models::Application, target: models::Application, unix_timestamp_seconds: u64) -> ElevationRequest {
         ElevationRequest {
             asker,
             target,
@@ -34,3 +30,4 @@ impl ElevationRequest {
         }
     }
 }
+
