# crates/devolutions-pedm-shared/devolutions-pedm-client-http/src/models/error_response.rs
@@ -3,8 +3,8 @@
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * The version of the OpenAPI document:
- *
+ * The version of the OpenAPI document: 
+ * 
  * Generated by: https://openapi-generator.tech
  */
 
@@ -21,6 +21,10 @@ pub struct ErrorResponse {
 
 impl ErrorResponse {
     pub fn new(kind: models::Error, win32_error: u32) -> ErrorResponse {
-        ErrorResponse { kind, win32_error }
+        ErrorResponse {
+            kind,
+            win32_error,
+        }
     }
 }
+
