# crates/devolutions-pedm-shared/devolutions-pedm-client-http/src/models/hash.rs
@@ -3,8 +3,8 @@
  *
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
- * The version of the OpenAPI document:
- *
+ * The version of the OpenAPI document: 
+ * 
  * Generated by: https://openapi-generator.tech
  */
 
@@ -21,6 +21,10 @@ pub struct Hash {
 
 impl Hash {
     pub fn new(sha1: String, sha256: String) -> Hash {
-        Hash { sha1, sha256 }
+        Hash {
+            sha1,
+            sha256,
+        }
     }
 }
+
