# crates/devolutions-pedm-shared/devolutions-pedm-client-http/src/models/mod.rs
@@ -1,7 +1,5 @@
 pub mod application;
 pub use self::application::Application;
-pub mod application_filter;
-pub use self::application_filter::ApplicationFilter;
 pub mod assignment;
 pub use self::assignment::Assignment;
 pub mod authenticode_signature_status;
@@ -28,18 +26,12 @@ pub mod get_profiles_me_response;
 pub use self::get_profiles_me_response::GetProfilesMeResponse;
 pub mod hash;
 pub use self::hash::Hash;
-pub mod hash_filter;
-pub use self::hash_filter::HashFilter;
 pub mod launch_payload;
 pub use self::launch_payload::LaunchPayload;
 pub mod launch_response;
 pub use self::launch_response::LaunchResponse;
 pub mod optional_id;
 pub use self::optional_id::OptionalId;
-pub mod path_filter;
-pub use self::path_filter::PathFilter;
-pub mod path_filter_kind;
-pub use self::path_filter_kind::PathFilterKind;
 pub mod path_id_parameter;
 pub use self::path_id_parameter::PathIdParameter;
 pub mod profile;
@@ -50,18 +42,12 @@ pub mod session_elevation_status;
 pub use self::session_elevation_status::SessionElevationStatus;
 pub mod signature;
 pub use self::signature::Signature;
-pub mod signature_filter;
-pub use self::signature_filter::SignatureFilter;
 pub mod signer;
 pub use self::signer::Signer;
 pub mod startup_info_dto;
 pub use self::startup_info_dto::StartupInfoDto;
 pub mod status_response;
 pub use self::status_response::StatusResponse;
-pub mod string_filter;
-pub use self::string_filter::StringFilter;
-pub mod string_filter_kind;
-pub use self::string_filter_kind::StringFilterKind;
 pub mod temporary_elevation_configuration;
 pub use self::temporary_elevation_configuration::TemporaryElevationConfiguration;
 pub mod temporary_elevation_status;
