# crates/devolutions-pedm-shared/devolutions-pedm-client-http/src/models/path_filter.rs
@@ -1,26 +1,0 @@
-/*
- * Devolutions PEDM API
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document:
- *
- * Generated by: https://openapi-generator.tech
- */
-
-use crate::models;
-use serde::{Deserialize, Serialize};
-
-#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
-pub struct PathFilter {
-    #[serde(rename = "Data")]
-    pub data: String,
-    #[serde(rename = "Kind")]
-    pub kind: models::PathFilterKind,
-}
-
-impl PathFilter {
-    pub fn new(data: String, kind: models::PathFilterKind) -> PathFilter {
-        PathFilter { data, kind }
-    }
-}
