# crates/devolutions-pedm-shared/devolutions-pedm-client-http/src/models/path_filter_kind.rs
@@ -1,39 +1,0 @@
-/*
- * Devolutions PEDM API
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document:
- *
- * Generated by: https://openapi-generator.tech
- */
-
-use crate::models;
-use serde::{Deserialize, Serialize};
-
-///
-#[derive(Clone, Copy, Debug, Eq, PartialEq, Ord, PartialOrd, Hash, Serialize, Deserialize)]
-pub enum PathFilterKind {
-    #[serde(rename = "Equals")]
-    Equals,
-    #[serde(rename = "FileName")]
-    FileName,
-    #[serde(rename = "Wildcard")]
-    Wildcard,
-}
-
-impl std::fmt::Display for PathFilterKind {
-    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
-        match self {
-            Self::Equals => write!(f, "Equals"),
-            Self::FileName => write!(f, "FileName"),
-            Self::Wildcard => write!(f, "Wildcard"),
-        }
-    }
-}
-
-impl Default for PathFilterKind {
-    fn default() -> PathFilterKind {
-        Self::Equals
-    }
-}
